fix(style): sticky not working on iOS devices

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -42,6 +42,7 @@ body, button, input, select, textarea
     .column-right-shadow
         &.is-sticky
             align-self: flex-start
+            position: -webkit-sticky
             position: sticky
             top: .75rem
     .column-right-shadow
